<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.amith.cw3.StartWO">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/WS"
        android:id="@+id/textView13"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/CB"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true"
        android:layout_marginTop="101dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Time"
        android:id="@+id/textView15"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignParentEnd="true" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:layout_alignBottom="@+id/textView15"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView15" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Stop"
        android:id="@+id/button4"
        android:clickable="true"
        android:layout_marginTop="91dp"
        android:layout_below="@+id/chronometer"
        android:layout_alignEnd="@+id/textView13" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:id="@+id/button3"
        android:clickable="true"
        android:layout_alignTop="@+id/button4"
        android:layout_alignEnd="@+id/textView15" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="MM"/>

</RelativeLayout>
