<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.amith.cw3.SuccessfulPurchaseT">

    <ImageView
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:id="@+id/imageView3"
        android:background="@drawable/taco"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Tacos2"
        android:id="@+id/textView10"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:id="@+id/main"
        android:clickable="true"
        android:onClick="MM"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/RC"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView12" />

</RelativeLayout>
