<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.amith.cw.Eat">

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />



    <ImageButton
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:id="@+id/imageButton5"
        android:clickable="true"
        android:background="@drawable/cake"
        android:layout_below="@+id/searchView"
        android:layout_alignParentStart="true"
        android:onClick="SPC"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Red"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/imageButton5"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:id="@+id/imageButton"
        android:background="@drawable/taco"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:onClick="SPT"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Tacos"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:id="@+id/imageButton4"
        android:clickable="true"
        android:background="@drawable/index"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:onClick="SPCoDr"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/CD"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/imageButton4"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>
